src/test/deca/context/valid/created/testOpComp/GreaterTh.deca
// Description :
//    Test de l'opérateur de comparaison >
//
// Résultats :
//    ok


{
    int x = -(3+1);
    int y = 2;
    boolean z = x > y;
}
